tests/ui/async-await/async-closures/wrong-fn-kind.stderr
error[E0596]: cannot borrow `x` as mutable, as it is a captured variable in a `Fn` closure
  --> $DIR/wrong-fn-kind.rs:9:20
   |
LL | fn needs_async_fn(_: impl async Fn()) {}
   |                      --------------- change this to accept `FnMut` instead of `Fn`
...
LL |     needs_async_fn(async || {
   |     -------------- ^^^^^^^^
   |     |              |
   |     |              cannot borrow as mutable
   |     |              in this closure
   |     expects `Fn` instead of `FnMut`
LL |
LL |         x += 1;
   |         - mutable borrow occurs due to use of `x` in closure

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0596`.
